# BHARAT-SCREENER

./: .gitignore  README.md
backend/: .env.example  Cargo.toml  package-lock.json  package.json
backend/data/: nse_scrips.json  stocks.db-shm
backend/src/: forward_paper_trade.js  index.js  main.rs  portfolio_backtester.js
backend/src/hooks/: useStockData.js
backend/src/ml/: backtester.js  mlModel.js  optimizationEngine.js  technicalIndicators.js
backend/src/models/: stock.rs
backend/src/routes/: company.js  historical.js  holdings.js  mod.rs  portfolio.js  prediction.js  search.js  settings.js  stocks.rs  ws.rs
backend/src/services/: alertService.js  angelOneProvider.js  angelOneWebSocket.js  companyDetailsService.js  database.js  historicalDataService.js  historicalStore.js  marketDataService.js  market_data.rs  mod.rs  priceStore.js  screener.rs  scripMaster.js  tickStore.js
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
python-ml/: main.py  requirements.txt
python-ml/models/: A2ZINFRA_xgb.pkl  AAATECH_xgb.pkl  AADHARHFC_xgb.pkl  AAKASH_xgb.pkl  AAREYDRUGS_xgb.pkl  AARON_xgb.pkl  AARTECH_xgb.pkl  AARTIDRUGS_xgb.pkl  AARTIIND_xgb.pkl  AARTIPHARM_xgb.pkl  AARTISURF_xgb.pkl  AARVI_xgb.pkl  AAVAS_xgb.pkl  ABAN_xgb.pkl  ABBOTINDIA_xgb.pkl  ABB_xgb.pkl  ABCAPITAL_xgb.pkl  ABCOTS_xgb.pkl  ABDL_xgb.pkl  ABFRL_xgb.pkl  ABGSEC_xgb.pkl  ABINFRA_xgb.pkl  ABLBL_xgb.pkl  ABMINTLLTD_xgb.pkl  ABREL_xgb.pkl  ABSLAMC_xgb.pkl  ABSLBANETF_xgb.pkl  ABSLNN50ET_xgb.pkl  ABSLPSE_xgb.pkl  ACCELYA_xgb.pkl  ACCURACY_xgb.pkl  (+71 more)
(+12 files in other folders)
