[package]
name = "stock-screener"
version = "0.1.0"
edition = "2021"
authors = ["Shreyash"]
description = "Real-time stock screener with WebSocket support"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Tower middleware
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Environment
dotenvy = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Concurrent data structures
dashmap = "6"

# Random for demo data
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
